# DesignPatternLearning

./: CMakeLists.txt  DesingPetternQuiz.pro
